Bug 127230 - Button with keyboard focus displayed light gray with white text on macOS
Summary: Button with keyboard focus displayed light gray with white text on macOS
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: All macOS (All)
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2019-08-29 23:06 UTC by Thorsten Wagner
Modified: 2019-08-30 17:21 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot (219.86 KB, image/png)
2019-08-29 23:06 UTC, Thorsten Wagner
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thorsten Wagner 2019-08-29 23:06:16 UTC
Description:
Button with keyboard focus displayed light gray with white text on macOS (see screenshot attached). Text is hardly readable. Keyboard focus is shown by a dotted line. On macOS focused UI elements have to be displayed blue.

Steps to Reproduce:
1. Open LibeOffice
2. Select About LibreOffice from menue

Actual Results:
Button with keyboard focus is displayed light gray with dotted line around white text.

Expected Results:
Button is displayed blue with white text and without dotted line.


Reproducible: Always


User Profile Reset: No


OpenGL enabled: Yes

Additional Info:
Comment 1 Thorsten Wagner 2019-08-29 23:06:38 UTC
Created attachment 153739 [details]
Screenshot
Comment 2 V Stuart Foote 2019-08-30 03:29:34 UTC
Also likely from work on flickering UI

https://gerrit.libreoffice.org/#/c/77969/

Which  I think Miklos has already reverted/corrected with

https://gerrit.libreoffice.org/#/c/78280/

so please check next round of TB builds.
Comment 3 Thorsten Wagner 2019-08-30 13:03:01 UTC
Problem still exists with current revision from master, at least on macOS
Comment 4 Commit Notification 2019-08-30 17:07:22 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/3779abce2f9562b94f59fc950400081037340096%5E%21

tdf#127230 vcl: about dialog double-buffer on macOS is not needed

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.