tdf#127230 vcl: about dialog double-buffer on macOS is not needed

This was a problem since commit 7eb37a422f2e66bc177d72404c53659a248661ca
(tdf#118856 vcl: avoid flicker in the about dialog, 2019-08-12).

Given that probably sooner or later this application-level
double-buffering will not be needed anyway, just do the minimal fix and
avoid it for the about dialog on macOS.

(Versus low-level double-buffering as macOS, gtk3 or OpenGL does.)

Change-Id: I5dc60e5c064d1e90057f9aa9a22db9f67680eb26
Reviewed-on: https://gerrit.libreoffice.org/78313
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
Tested-by: Jenkins